changes to controllers and frontend
