# SRC_Summer/DocumentManager.Webapi/wwwroot/swagger/v1/swagger.json
@@ -19,17 +19,7 @@
           "200": {
             "description": "Success",
             "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/Document"
-                }
-              },
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/Document"
-                }
-              },
-              "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/Document"
                 }
@@ -39,17 +29,7 @@
           "404": {
             "description": "Not Found",
             "content": {
-              "text/plain": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
               "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/ProblemDetails"
-                }
-              },
-              "text/json": {
                 "schema": {
                   "$ref": "#/components/schemas/ProblemDetails"
                 }
